--- a/receitas/templates/receitas/pages/home.html
+++ b/receitas/templates/receitas/pages/home.html
@@ -1,13 +1,11 @@
 {% extends 'global/base.html' %}
 {% block content%}
 
+{% block title %}Home | {% endblock title %}
+
 <div class="main-content main-content-list container">
-    {% include 'receitas/partials/recipe.html' %}
-    {% include 'receitas/partials/recipe.html' %}
-    {% include 'receitas/partials/recipe.html' %}
-    {% include 'receitas/partials/recipe.html' %}
-    {% include 'receitas/partials/recipe.html' %}
-    {% include 'receitas/partials/recipe.html' %}
-    {% include 'receitas/partials/recipe.html' %}
+    {%for recipe in recipes %}
+        {% include 'receitas/partials/recipe.html' %}
+    {% endfor%}
 </div>
 {% endblock content%}
