--- a/receitas/templates/receitas/partials/header.html
+++ b/receitas/templates/receitas/partials/header.html
@@ -1,7 +1,7 @@
 <header class="main-header-container">
     <div class="main-header container">
         <h1>
-            <a class="main-logo" hef="/">
+            <a class="main-logo" hef="{%url 'recipes-home'%}">
                 <i class="fas fa fa-bowl-food main-logo-icon"></i>
                 <spam class="main-logo-text">Receitas</spam>
             </a>
